k8s/07-flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-flask-service
spec:
  selector:
    app: myapp-flask
  ports:
    - port: 80
      targetPort: 5000
  type: NodePort
  externalTrafficPolicy: Local
